--- a/release.yaml
+++ b/release.yaml
@@ -72,6 +72,8 @@ rancher-gatekeeper-crd:
   - 104.0.0+up3.13.0
 rancher-istio:
   - 104.0.0+up1.18.2
+rancher-webhook:
+  - 104.0.0+up0.5.0-rc2
 rancher-windows-gmsa:
   - 104.0.0+up0.3.0
 rancher-windows-gmsa-crd:
