--- a/packages/rancher-webhook/package.yaml
+++ b/packages/rancher-webhook/package.yaml
@@ -1,3 +1,3 @@
-url: https://github.com/rancher/webhook/releases/download/v0.4.2/rancher-webhook-0.4.2.tgz
-version: 103.0.1
+url: https://github.com/rancher/webhook/releases/download/v0.5.0-rc2/rancher-webhook-0.5.0-rc2.tgz
+version: 104.0.0
 doNotRelease: false
