--- a/charts/rancher-monitoring/104.0.2+up45.31.1/charts/prometheus-node-exporter/values.yaml
+++ b/charts/rancher-monitoring/104.0.2+up45.31.1/charts/prometheus-node-exporter/values.yaml
@@ -35,7 +35,7 @@ global:
   imagePullSecrets: []
   #
   # Allow parent charts to override registry hostname
-  imageRegistry: ""
+  imageRegistry: "docker.io"
 
 # Configure kube-rbac-proxy. When enabled, creates a kube-rbac-proxy to protect the node-exporter http endpoint.
 # The requests are served through the same service but requests are HTTPS.
