--- a/charts/rancher-monitoring/104.0.2+up45.31.1/templates/prometheus-operator/admission-webhooks/job-patch/job-createSecret.yaml
+++ b/charts/rancher-monitoring/104.0.2+up45.31.1/templates/prometheus-operator/admission-webhooks/job-patch/job-createSecret.yaml
@@ -34,7 +34,7 @@ spec:
       {{- end }}
       containers:
         - name: create
-          {{- $registry := .Values.global.imageRegistry | default .Values.prometheusOperator.admissionWebhooks.patch.image.registry -}}
+          {{- $registry := include "monitoring_registry" . | default .Values.prometheusOperator.admissionWebhooks.patch.image.registry -}}
           {{- if .Values.prometheusOperator.admissionWebhooks.patch.image.sha }}
           image: {{ $registry }}/{{ .Values.prometheusOperator.admissionWebhooks.patch.image.repository }}:{{ .Values.prometheusOperator.admissionWebhooks.patch.image.tag }}@sha256:{{ .Values.prometheusOperator.admissionWebhooks.patch.image.sha }}
           {{- else }}
