--- a/charts/rancher-monitoring/104.0.2+up45.31.1/templates/thanos-ruler/ruler.yaml
+++ b/charts/rancher-monitoring/104.0.2+up45.31.1/templates/thanos-ruler/ruler.yaml
@@ -13,7 +13,7 @@ metadata:
 {{- end }}
 spec:
 {{- if .Values.thanosRuler.thanosRulerSpec.image }}
-  {{- $registry := .Values.global.imageRegistry | default .Values.thanosRuler.thanosRulerSpec.image.registry -}}
+  {{- $registry := include "monitoring_registry" . | default .Values.thanosRuler.thanosRulerSpec.image.registry -}}
   {{- if and .Values.thanosRuler.thanosRulerSpec.image.tag .Values.thanosRuler.thanosRulerSpec.image.sha }}
   image: "{{ $registry }}/{{ .Values.thanosRuler.thanosRulerSpec.image.repository }}:{{ .Values.thanosRuler.thanosRulerSpec.image.tag }}@sha256:{{ .Values.thanosRuler.thanosRulerSpec.image.sha }}"
   {{- else if .Values.thanosRuler.thanosRulerSpec.image.sha }}
