--- a/charts/rancher-monitoring-crd/104.0.2+up45.31.1/templates/rbac.yaml
+++ b/charts/rancher-monitoring-crd/104.0.2+up45.31.1/templates/rbac.yaml
@@ -9,7 +9,7 @@ rules:
   - apiextensions.k8s.io
   resources:
   - customresourcedefinitions
-  verbs: ['create', 'get', 'patch', 'delete']
+  verbs: ['create', 'get', 'patch', 'delete', 'replace']
 {{- if .Values.global.cattle.psp.enabled }}
 - apiGroups: ['policy']
   resources: ['podsecuritypolicies']
