[dev-v2.9] rancher-logging rke2 patch kubelet logs volume mount to follow rotates (#3451)
Signed-off-by: Alexandre Lamarre <alexandre.lamarre@suse.com>

--- a/charts/rancher-logging/104.0.0+up3.17.10/templates/loggings/rke2/daemonset.yaml
+++ b/charts/rancher-logging/104.0.0+up3.17.10/templates/loggings/rke2/daemonset.yaml
@@ -31,7 +31,7 @@ spec:
             - mountPath: {{ .Values.systemdLogPath | default "/var/log/journal" }}
               name: journal
               readOnly: true
-            - mountPath: "/var/lib/rancher/rke2/agent/logs/kubelet.log"
+            - mountPath: "/var/lib/rancher/rke2/agent/logs"
               name: kubelet
               readOnly: true
             - mountPath: /etc/machine-id
@@ -53,7 +53,7 @@ spec:
             path: {{ .Values.systemdLogPath | default "/var/log/journal" }}
         - name: kubelet
           hostPath:
-            path: "/var/lib/rancher/rke2/agent/logs/kubelet.log"
+            path: "/var/lib/rancher/rke2/agent/logs"
         - name: machine-id
           hostPath:
             path: /etc/machine-id
