--- a/charts/rancher-eks-operator-crd/104.0.0+up1.4.0-rc2/templates/crds.yaml
+++ b/charts/rancher-eks-operator-crd/104.0.0+up1.4.0-rc2/templates/crds.yaml
@@ -47,6 +47,9 @@ spec:
               nodeGroups:
                 items:
                   properties:
+                    arm:
+                      nullable: true
+                      type: boolean
                     desiredSize:
                       nullable: true
                       type: integer
