--- a/charts/rancher-monitoring/104.0.2+up45.31.1/templates/grafana/dashboards-1.14/grafana-overview.yaml
+++ b/charts/rancher-monitoring/104.0.2+up45.31.1/templates/grafana/dashboards-1.14/grafana-overview.yaml
@@ -8,7 +8,7 @@ https://github.com/prometheus-community/helm-charts/tree/main/charts/kube-promet
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: {{ template "kube-prometheus-stack-grafana.namespace" . }}
+  namespace: {{ .Values.grafana.defaultDashboards.namespace }}
   name: {{ printf "%s-%s" (include "kube-prometheus-stack.fullname" $) "grafana-overview" | trunc 63 | trimSuffix "-" }}
   annotations:
 {{ toYaml .Values.grafana.sidecar.dashboards.annotations | indent 4 }}
