Logging rebase to 4.4.0 (#3284)

--- a/packages/rancher-logging/package.yaml
+++ b/packages/rancher-logging/package.yaml
@@ -1,6 +1,4 @@
-url: https://github.com/kube-logging/logging-operator.git
-subdirectory: charts/logging-operator
-commit: ebf7ec008e8c1d5dbc7a8454d4a209153a4ccca7
+url: oci://ghcr.io/kube-logging/helm-charts/logging-operator:4.4.0
 version: 104.0.0
 additionalCharts:
   - workingDir: charts-crd
