[dev-v2.9] Bump chart cloud-provider-harvester to v0.2.3 in Rancher v2.9 (#3316)
Signed-off-by: Jian Wang <w13915984028@gmail.com>

--- a/packages/harvester/harvester-cloud-provider/generated-changes/dependencies/kube-vip/dependency.yaml
+++ b/packages/harvester/harvester-cloud-provider/generated-changes/dependencies/kube-vip/dependency.yaml
@@ -1,3 +1,5 @@
+workingDir: ""
 url: https://github.com/harvester/charts/releases/download/harvester-cloud-provider-0.2.3/harvester-cloud-provider-0.2.3.tgz
-version: 104.0.0
-doNotRelease: false
+subdirectory: dependency_charts/kube-vip
+ignoreDependencies: []
+replacePaths: []
