--- a/release.yaml
+++ b/release.yaml
@@ -8,6 +8,8 @@ longhorn:
   - 102.3.1+up1.5.3
 longhorn-crd:
   - 102.3.1+up1.5.3
+harvester-cloud-provider:
+  - 104.0.0+up0.2.3
 neuvector:
   - 102.0.6+up2.6.6
   - 103.0.1+up2.7.1
