Define a CODEOWNER file for rancher/charts repository (#3492)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,13 @@
 # Global Reviewer
-* @rancher/mapps
+docs @rancher/mapps
+scripts @rancher/mapps
+CNAME @rancher/mapps
+Makefile @rancher/mapps
+README.md @rancher/mapps
+_config.yml @rancher/mapps
+configuration.yaml @rancher/mapps
+regsync.yaml @rancher/mapps
+index.html @rancher/mapps
 
 # Elemental 
 packages/elemental @rancher/elemental
