[dev-v2.9] Bump harvester-csi-driver 0.1.17 and update harvester csi driver for v2.9 (#3301)
Signed-off-by: Vicente Cheng <vicente.cheng@suse.com>

--- a/release.yaml
+++ b/release.yaml
@@ -92,3 +92,5 @@ ui-plugin-operator:
 ui-plugin-operator-crd:
   - 103.0.2+up0.2.1
   - 104.0.0+up0.2.1
+harvester-csi-driver:
+  - 104.0.0+up0.1.17
