[v2.9] Bump gke-operator to v1.3.0-rc5 (#3507)

--- a/charts/rancher-gke-operator-crd/104.0.0+up1.3.0-rc5/templates/crds.yaml
+++ b/charts/rancher-gke-operator-crd/104.0.0+up1.3.0-rc5/templates/crds.yaml
@@ -43,6 +43,16 @@ spec:
               clusterName:
                 nullable: true
                 type: string
+              customerManagedEncryptionKey:
+                nullable: true
+                properties:
+                  keyName:
+                    nullable: true
+                    type: string
+                  ringName:
+                    nullable: true
+                    type: string
+                type: object
               description:
                 nullable: true
                 type: string
@@ -144,6 +154,9 @@ spec:
                     config:
                       nullable: true
                       properties:
+                        bootDiskKmsKey:
+                          nullable: true
+                          type: string
                         diskSizeGb:
                           type: integer
                         diskType:
