Define the proper team for rancher-logging and rancher-monitoring (#3513)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -35,10 +35,10 @@ packages/rancher-eks-operator @rancher/highlander
 packages/rancher-gke-operator @rancher/highlander
 
 # Rancher Alerting 
-packages/rancher-alerting @joshmeranda
+packages/rancher-alerting @rancher/observation-backup
 
 # Rancher Backup
-packages/rancher-backup @prachidamle
+packages/rancher-backup @rancher/observation-backup
 
 # Rancher CIS Benchmark 
 packages/rancher-cis-benchmark @rancher/infracloud-team
@@ -55,10 +55,10 @@ packages/rancher-istio @rancher/mapps
 tests/rancher-istio @rancher/mapps
 
 # Rancher Logging 
-packages/rancher-logging @joshmeranda
+packages/rancher-logging @rancher/observation-backup
 
 # Rancher Monitoring 
-packages/rancher-monitoring @joshmeranda
+packages/rancher-monitoring @rancher/observation-backup
 
 # Rancher SRIOV
 packages/rancher-sriov @rancher/rke1-team
