--- a/.github/workflows/regsync-config.yaml
+++ b/.github/workflows/regsync-config.yaml
@@ -1,5 +1,5 @@
-# Generate-Regsync-Config action will run for every PR into release-v* branch only after an approval is given 
-# It will run make target to generate regsync file and add a commit to the PR updating the regsync file. 
+# Generate-Regsync-Config action will run for every PR into release-v2.9 branch only after an approval is given
+# It will run make target to generate regsync file and add a commit to the PR updating the regsync file.
 # It will then install and run regsync client and do the prime image mirroring.
 
 name: Generate-Regsync-Config
@@ -33,10 +33,10 @@ jobs:
     if: needs.onLabelAndApproval.outputs.is_approved == 'true'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          token: ${{ secrets.PUSH_TOKEN }} 
+          token: ${{ secrets.PUSH_TOKEN }}
 
       - name: Set-up Ruby 3.2
         uses: ruby/setup-ruby@v1
