[dev-2.9] rancher-vsphere-csi/rancher-vsphere-cpi k8s 1.28 support (#3395)

--- a/release.yaml
+++ b/release.yaml
@@ -79,8 +79,10 @@ rancher-monitoring-crd:
   - 104.0.2+up45.31.1
 rancher-vsphere-cpi:
   - 104.0.0+up1.6.0
+  - 104.1.0+up1.7.0
 rancher-vsphere-csi:
   - 104.0.0+up3.0.2-rancher1
+  - 104.1.0+up3.1.2-rancher1
 rancher-webhook:
   - 104.0.0+up0.5.0-rc6
 rancher-windows-gmsa:
