Update Fleet to v0.10.0-rc.4 (#3554)

--- a/packages/fleet/fleet-agent/package.yaml
+++ b/packages/fleet/fleet-agent/package.yaml
@@ -1,2 +1,2 @@
-url: https://github.com/rancher/fleet/releases/download/v0.9.0/fleet-agent-0.9.0.tgz
-version: 103.1.0
+url: https://github.com/rancher/fleet/releases/download/v0.10.0-rc.4/fleet-agent-0.10.0-rc.4.tgz
+version: 104.0.0
