[rancher-logging] support for logging resource specific serviceaccount annotation, e.g. for AWS STS / IRSA (#2646)
Signed-off-by: Dominik Wombacher <domwom@amazon.de>

--- a/charts/rancher-logging/104.0.0+up4.4.0/templates/loggings/root/logging.yaml
+++ b/charts/rancher-logging/104.0.0+up4.4.0/templates/loggings/root/logging.yaml
@@ -78,5 +78,14 @@ spec:
       Merge_Parser: "{{ .Values.fluentbit.filterKubernetes.Merge_Parser }}"
       {{- end }}
     {{- end }}
+  fluentd:
+    {{- if .Values.loggingServiceAccountAnnotations.root }}
+    serviceAccount:
+      metadata:
+        annotations:
+        {{- with .Values.loggingServiceAccountAnnotations.root }}
+        {{ toYaml . | indent 8 }}
+        {{- end }}
+    {{- end }}
 {{- end -}}
 {{- include "logging-operator.logging" (list . "logging-operator.logging.root") -}}
