--- a/charts/rancher-logging/104.0.0+up4.4.0/values.yaml
+++ b/charts/rancher-logging/104.0.0+up4.4.0/values.yaml
@@ -292,6 +292,27 @@ monitoring:
     metricRelabelings: []
     relabelings: []
 
+# Logging CR specific serviceAccount annotations
+loggingServiceAccountAnnotations: {}
+## Syntax ##
+#  <logging-name>:
+#    <key>: <value>
+#
+## Example ##
+#
+#  root:
+#    eks.amazonaws.com/role-arn: <RoleARN>
+#
+## Result - added to the Logging resource ##
+#
+#  spec:
+#    fluentd:
+#      serviceAccount:
+#        metadata:
+#          annotations:
+#            eks.amazonaws.com/role-arn: arn:aws:iam::1234567890:role/my-iam-role
+#
+
 ###################################
 # Rancher Logging Operator Values #
 ###################################
