--- a/charts/rancher-logging/104.0.0+up4.4.0/templates/loggings/eks/logging.yaml
+++ b/charts/rancher-logging/104.0.0+up4.4.0/templates/loggings/eks/logging.yaml
@@ -13,6 +13,15 @@ spec:
       Tag: "eks"
       Path: {{ $logPath }}
       Parser: "syslog"
+  fluentd:
+    {{- if .Values.loggingServiceAccountAnnotations.eks }}
+    serviceAccount:
+      metadata:
+        annotations:
+        {{- with .Values.loggingServiceAccountAnnotations.eks }}
+        {{ toYaml . | indent 8 }}
+        {{- end }}
+    {{- end }}
 {{- end -}}
 {{- if .Values.additionalLoggingSources.eks.enabled }}
 {{- include "logging-operator.logging" (list . "logging-operator.logging.eks") -}}
