--- a/charts/rancher-istio/104.0.0+up1.18.2/charts/kiali/templates/deployment.yaml
+++ b/charts/rancher-istio/104.0.0+up1.18.2/charts/kiali/templates/deployment.yaml
@@ -6,6 +6,9 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "kiali-server.labels" . | nindent 4 }}
+  annotations:
+    "helm.sh/hook": post-install, post-upgrade
+    "helm.sh/hook-weight": "-4"
 spec:
   replicas: {{ .Values.deployment.replicas }}
   selector:
