[dev-v2.9] Forward ports sriov 102.2.0+up0.1.0 from release-v2.7 (#3631)

--- a/release.yaml
+++ b/release.yaml
@@ -112,3 +112,7 @@ ui-plugin-operator-crd:
   - 104.0.0+up0.2.1
 harvester-csi-driver:
   - 104.0.0+up0.1.17
+sriov:
+  - 102.2.0+up0.1.0
+sriov-crd:
+  - 102.2.0+up0.1.0
