[dev-v2.9] Bump `rancher-vsphere-csi` to include a bugfix for CSI Snapshotter (#3654)

--- a/release.yaml
+++ b/release.yaml
@@ -110,6 +110,7 @@ rancher-vsphere-cpi:
 rancher-vsphere-csi:
   - 104.0.0+up3.0.2-rancher1
   - 104.1.0+up3.1.2-rancher1
+  - 104.2.0+up3.1.2-rancher2
   - 102.2.0+up3.0.2-rancher1
 rancher-webhook:
   - 104.0.0+up0.5.0-rc6
