[dev-v2.9] harvester-cloud-provider update (#3702)
Signed-off-by: PoAn Yang <poan.yang@suse.com>

--- a/charts/harvester-cloud-provider/104.0.0+up0.2.3/Chart.yaml
+++ b/charts/harvester-cloud-provider/104.0.0+up0.2.3/Chart.yaml
@@ -4,6 +4,7 @@ annotations:
   catalog.cattle.io/kube-version: '>= 1.23.0-0 < 1.30.0-0'
   catalog.cattle.io/namespace: kube-system
   catalog.cattle.io/os: linux
+  catalog.cattle.io/permits-os: linux
   catalog.cattle.io/rancher-version: '>= 2.9.0-0 < 2.10.0-0'
   catalog.cattle.io/release-name: harvester-cloud-provider
   catalog.cattle.io/ui-component: harvester-cloud-provider
