[dev-v2.9] Forward ports elemental 103.1.0+up1.4.2 (#3724)

--- a/release.yaml
+++ b/release.yaml
@@ -160,3 +160,7 @@ epinio-crd:
   - 103.0.0+up1.8.1
   - 103.0.1+up1.9.0
   - 103.0.2+up1.10.0
+elemental:
+  - 103.1.0+up1.4.2
+elemental-crd:
+  - 103.1.0+up1.4.2
