--- a/release.yaml
+++ b/release.yaml
@@ -116,6 +116,7 @@ rancher-vsphere-cpi:
 rancher-vsphere-csi:
   - 104.0.0+up3.1.2-rancher2
   - 102.2.0+up3.0.2-rancher1
+  - 103.1.0+up3.1.2-rancher1
 rancher-webhook:
   - 104.0.0+up0.5.0-rc7
   - 2.0.7+up0.3.7
