[v2.9] Bump Windows fluent-bit version to remove foreign layers (#3788)

--- a/charts/rancher-logging/104.0.0-rc1+up4.4.0/values.yaml
+++ b/charts/rancher-logging/104.0.0-rc1+up4.4.0/values.yaml
@@ -348,7 +348,7 @@ images:
   nodeagent_fluentbit:
     os: "windows"
     repository: rancher/fluent-bit
-    tag: 1.8.9
+    tag: v1.8.10
   fluentbit_debug:
     repository: rancher/mirrored-fluent-fluent-bit
     tag: 2.2.0-debug
