[dev-v2.9] Update sriov chart to 104.0.0 (#3841)
Signed-off-by: Michael Fritch <mfritch@suse.com>

--- a/packages/rancher-sriov/templates/crd-template/Chart.yaml
+++ b/packages/rancher-sriov/templates/crd-template/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-version: 103.0.0
-description: Installs the CRDs for rke2-sriov.
+description: Installs the CRDs for the SR-IOV operator
 name: sriov-crd
 type: application
+version: 104.0.0
 annotations:
   catalog.cattle.io/experimental: "true"
   catalog.cattle.io/release-name: sriov-crd
