--- a/packages/rancher-sriov/package.yaml
+++ b/packages/rancher-sriov/package.yaml
@@ -1,7 +1,7 @@
 url: https://github.com/k8snetworkplumbingwg/sriov-network-operator.git
 subdirectory: deployment/sriov-network-operator
-commit: bcab8844d807ee1db558533248273ccd492874bb # the commit points to the tag v1.2.0
-version: 103.0.0
+commit: f2ca88418036a7836ea2c0bd1f648a47774997c4 # March 2024
+version: 104.0.0
 additionalCharts:
   - workingDir: charts-crd
     crdOptions:
