--- a/packages/rancher-monitoring/rancher-pushprox/charts/values.yaml
+++ b/packages/rancher-monitoring/rancher-pushprox/charts/values.yaml
@@ -130,7 +130,7 @@ clients:
 
   image:
     repository: rancher/pushprox-client
-    tag: v0.1.2-rancher2-client
+    tag: v0.1.3-rc1-rancher2-client
   command: ["pushprox-client"]
 
   copyCertsImage:
@@ -162,5 +162,5 @@ proxy:
 
   image:
     repository: rancher/pushprox-proxy
-    tag: v0.1.2-rancher2-proxy
+    tag: v0.1.3-rc1-rancher2-proxy
   command: ["pushprox-proxy"]
