[dev-v2.9] Adding slash prefix to root files (#3883)
Co-authored-by: Manuel Recena <manuel.recena@suse.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,14 +1,14 @@
 # Global Reviewer
-.github @rancher/mapps
-docs @rancher/mapps
-scripts @rancher/mapps
-CNAME @rancher/mapps
-Makefile @rancher/mapps
-README.md @rancher/mapps
-_config.yml @rancher/mapps
-configuration.yaml @rancher/mapps
-regsync.yaml @rancher/mapps
-index.html @rancher/mapps
+/.github @rancher/mapps
+/docs @rancher/mapps
+/scripts @rancher/mapps
+/CNAME @rancher/mapps
+/Makefile @rancher/mapps
+/README.md @rancher/mapps
+/_config.yml @rancher/mapps
+/configuration.yaml @rancher/mapps
+/regsync.yaml @rancher/mapps
+/index.html @rancher/mapps
 
 # Elemental 
 packages/elemental @rancher/elemental
