--- a/charts/elemental/104.0.0+up1.4.3/questions.yaml
+++ b/charts/elemental/104.0.0+up1.4.3/questions.yaml
@@ -7,15 +7,15 @@ questions:
   show_subquestion_if: true
   group: "Elemental OS Channel"
   subquestions:
-  - variable: channel.repository
-    default: registry.suse.com/rancher/elemental-teal-channel
-    description: "Specify Elemental OS channel repository"
+  - variable: channel.image
+    default: registry.suse.com/rancher/elemental-channel
+    description: "Specify the Elemental OS channel: for air-gapped scenarios you need to provide your own OS channel image (see https://elemental.docs.rancher.com/airgap for detailed instructions)"
     type: string
-    label: Elemental OS Channel Repository
+    label: Elemental OS Channel Image
     group: "Elemental OS Channel"
   - variable: channel.tag
-    default: "1.3.4"
-    description: "Specify Elemental OS channel tag"
+    default: "1.4.3"
+    description: "Specify Elemental OS channel image tag"
     type: string
     label: "Elemental OS Channel Tag"
     group: "Elemental OS Channel"
