[dev-v2.9] Csp adapter release v4.0.0 rc1 (#3875)

--- a/packages/rancher-csp-adapter/package.yaml
+++ b/packages/rancher-csp-adapter/package.yaml
@@ -1,2 +1,2 @@
-url: https://github.com/rancher/csp-adapter/releases/download/v3.0.0/rancher-csp-adapter-3.0.0.tgz
-version: 103.0.0
+url: https://github.com/rancher/csp-adapter/releases/download/v4.0.0-rc1/rancher-csp-adapter-4.0.0-rc1.tgz
+version: 104.0.0
