[dev-v2.9] Bump aks-operator to v2.9.0-rc.1 (#3867)

--- a/charts/rancher-aks-operator/104.0.0+up2.9.0-rc.1/templates/deployment.yaml
+++ b/charts/rancher-aks-operator/104.0.0+up2.9.0-rc.1/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
         runAsUser: 1007
       containers:
       - name: aks-operator
-        image: {{ template "system_default_registry" . }}{{ .Values.aksOperator.image.repository }}:{{ .Values.aksOperator.image.tag }}
+        image: '{{ template "system_default_registry" $ }}{{ $.Values.aksOperator.image.repository }}:{{ $.Values.aksOperator.image.tag }}'
         imagePullPolicy: IfNotPresent
         env:
         - name: HTTP_PROXY
