--- a/charts/rancher-aks-operator/104.0.0+up2.9.0-rc.1/values.yaml
+++ b/charts/rancher-aks-operator/104.0.0+up2.9.0-rc.1/values.yaml
@@ -5,7 +5,7 @@ global:
 aksOperator:
   image:
     repository: rancher/aks-operator
-    tag: v1.3.0-rc12
+    tag: v2.9.0-rc.1
 
 httpProxy: ""
 httpsProxy: ""
