--- a/packages/rancher-aks-operator/rancher-aks-operator-crd/package.yaml
+++ b/packages/rancher-aks-operator/rancher-aks-operator-crd/package.yaml
@@ -1,2 +1,2 @@
-url: https://github.com/rancher/aks-operator/releases/download/v1.3.0-rc12/rancher-aks-operator-crd-1.3.0-rc12.tgz
+url: https://github.com/rancher/aks-operator/releases/download/v2.9.0-rc.1/rancher-aks-operator-crd-2.9.0-rc.1.tgz
 version: 104.0.0
