[dev-v2.9] Bump eks-operator to v2.9.0-rc.1 (#3866)

--- a/charts/rancher-eks-operator-crd/104.0.0+up2.9.0-rc.1/Chart.yaml
+++ b/charts/rancher-eks-operator-crd/104.0.0+up2.9.0-rc.1/Chart.yaml
@@ -6,7 +6,7 @@ annotations:
   catalog.cattle.io/permits-os: linux,windows
   catalog.cattle.io/release-name: rancher-eks-operator-crd
 apiVersion: v2
-appVersion: 1.4.0-rc9
+appVersion: 2.9.0-rc.1
 description: EKS Operator CustomResourceDefinitions
 name: rancher-eks-operator-crd
-version: 104.0.0+up1.4.0-rc9
+version: 104.0.0+up2.9.0-rc.1
