--- a/charts/rancher-eks-operator/104.0.0+up2.9.0-rc.1/templates/deployment.yaml
+++ b/charts/rancher-eks-operator/104.0.0+up2.9.0-rc.1/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
         runAsUser: 1007
       containers:
       - name: eks-operator
-        image: {{ template "system_default_registry" . }}{{ .Values.eksOperator.image.repository }}:{{ .Values.eksOperator.image.tag }}
+        image: '{{ template "system_default_registry" $ }}{{ $.Values.eksOperator.image.repository }}:{{ $.Values.eksOperator.image.tag }}'
         imagePullPolicy: IfNotPresent
         env:
         - name: HTTP_PROXY
