--- a/packages/rancher-eks-operator/rancher-eks-operator-crd/package.yaml
+++ b/packages/rancher-eks-operator/rancher-eks-operator-crd/package.yaml
@@ -1,2 +1,2 @@
-url: https://github.com/rancher/eks-operator/releases/download/v1.4.0-rc9/rancher-eks-operator-crd-1.4.0-rc9.tgz
+url: https://github.com/rancher/eks-operator/releases/download/v2.9.0-rc.1/rancher-eks-operator-crd-2.9.0-rc.1.tgz
 version: 104.0.0
