--- a/charts/rancher-eks-operator/104.0.0+up2.9.0-rc.1/values.yaml
+++ b/charts/rancher-eks-operator/104.0.0+up2.9.0-rc.1/values.yaml
@@ -5,7 +5,7 @@ global:
 eksOperator:
   image:
     repository: rancher/eks-operator
-    tag: v1.4.0-rc9
+    tag: v2.9.0-rc.1
 
 httpProxy: ""
 httpsProxy: ""
