[dev-v2.9] Bump gke-operator to v2.9.0-rc.1 (#3865)

--- a/charts/rancher-gke-operator/104.0.0+up2.9.0-rc.1/templates/deployment.yaml
+++ b/charts/rancher-gke-operator/104.0.0+up2.9.0-rc.1/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
         runAsUser: 1007
       containers:
       - name: rancher-gke-operator
-        image: {{ template "system_default_registry" . }}{{ .Values.gkeOperator.image.repository }}:{{ .Values.gkeOperator.image.tag }}
+        image: '{{ template "system_default_registry" $ }}{{ $.Values.gkeOperator.image.repository }}:{{ $.Values.gkeOperator.image.tag }}'
         imagePullPolicy: IfNotPresent
         env:
         - name: HTTP_PROXY
