--- a/charts/rancher-gke-operator/104.0.0+up2.9.0-rc.1/values.yaml
+++ b/charts/rancher-gke-operator/104.0.0+up2.9.0-rc.1/values.yaml
@@ -5,7 +5,7 @@ global:
 gkeOperator:
   image:
     repository: rancher/gke-operator
-    tag: v1.3.0-rc6
+    tag: v2.9.0-rc.1
 
 httpProxy: ""
 httpsProxy: ""
