--- a/charts/rancher-gke-operator-crd/104.0.0+up2.9.0-rc.1/Chart.yaml
+++ b/charts/rancher-gke-operator-crd/104.0.0+up2.9.0-rc.1/Chart.yaml
@@ -6,7 +6,7 @@ annotations:
   catalog.cattle.io/permits-os: linux,windows
   catalog.cattle.io/release-name: rancher-gke-operator-crd
 apiVersion: v2
-appVersion: 1.3.0-rc6
+appVersion: 2.9.0-rc.1
 description: GKE Operator CustomResourceDefinitions
 name: rancher-gke-operator-crd
-version: 104.0.0+up1.3.0-rc6
+version: 104.0.0+up2.9.0-rc.1
