--- a/charts/rancher-aks-operator/104.0.0+up1.9.0-rc.1/values.yaml
+++ b/charts/rancher-aks-operator/104.0.0+up1.9.0-rc.1/values.yaml
@@ -2,15 +2,16 @@ global:
   cattle:
     systemDefaultRegistry: ""
 
-gkeOperator:
+aksOperator:
   image:
-    repository: rancher/gke-operator
-    tag: v2.9.0-rc.1
+    repository: rancher/aks-operator
+    tag: v1.9.0-rc.1
 
 httpProxy: ""
 httpsProxy: ""
 noProxy: ""
 additionalTrustedCAs: false
+
 ## Node labels for pod assignment
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
 ##
