--- a/release.yaml
+++ b/release.yaml
@@ -180,6 +180,7 @@ rancher-vsphere-csi:
   - 104.0.0+up3.1.2-rancher4
   - 102.2.0+up3.0.2-rancher1
   - 103.1.0+up3.1.2-rancher1
+  - 103.1.1+up3.1.2-rancher4
 rancher-webhook:
   - 104.0.0+up0.5.0-rc8
   - 2.0.7+up0.3.7
