[dev-v2.9] Use Upstream Windows Node Exporter In Rancher Monitoring (#3607)

--- a/charts/rancher-monitoring/104.0.0-rc1+up45.31.1/charts/windowsExporter/Chart.yaml
+++ b/charts/rancher-monitoring/104.0.0-rc1+up45.31.1/charts/windowsExporter/Chart.yaml
@@ -1,15 +1,17 @@
-annotations:
-  catalog.cattle.io/hidden: "true"
-  catalog.cattle.io/os: windows
-  catalog.rancher.io/certified: rancher
-  catalog.rancher.io/namespace: cattle-monitoring-system
-  catalog.rancher.io/release-name: rancher-windows-exporter
-apiVersion: v1
-appVersion: 0.0.2
-description: Sets up monitoring metrics from Windows nodes via Prometheus windows-exporter
+apiVersion: v2
+appVersion: 0.25.1
+description: A Helm chart for prometheus windows-exporter
+home: https://github.com/prometheus-community/windows_exporter/
+keywords:
+- windows-exporter
+- windows
+- prometheus
+- exporter
 maintainers:
-- email: arvind.iyengar@rancher.com
-  name: aiyengar2
+- email: github@jkroepke.de
+  name: jkroepke
 name: windowsExporter
+sources:
+- https://github.com/prometheus-community/windows_exporter/
 type: application
-version: 0.1.1
+version: 0.3.1
