--- a/regsync.yaml
+++ b/regsync.yaml
@@ -1437,6 +1437,12 @@ sync:
     - v2.28.1
     - v2.38.0
     - v2.42.0
+- source: docker.io/rancher/mirrored-prometheus-windows-exporter
+  target: '{{ env "REGISTRY_ENDPOINT" }}/rancher/mirrored-prometheus-windows-exporter'
+  type: repository
+  tags:
+    allow:
+      - 0.25.1
 - source: docker.io/rancher/mirrored-s3gw-s3gw
   target: '{{ env "REGISTRY_ENDPOINT" }}/rancher/mirrored-s3gw-s3gw'
   type: repository
