--- a/charts/rancher-monitoring/104.0.0-rc1+up45.31.1/charts/windowsExporter/templates/daemonset.yaml
+++ b/charts/rancher-monitoring/104.0.0-rc1+up45.31.1/charts/windowsExporter/templates/daemonset.yaml
@@ -1,77 +1,200 @@
-{{- if .Values.clients }}{{ if .Values.clients.enabled }}
-{{ include "windowsExporter.validatePathPrefix" . }}
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: {{ template "windowsExporter.name" . }}
-  namespace: {{ template "windowsExporter.namespace" . }}
-  labels: {{ include "windowsExporter.labels" . | nindent 4 }}
+  name: {{ include "prometheus-windows-exporter.fullname" . }}
+  namespace: {{ include "prometheus-windows-exporter.namespace" . }}
+  labels:
+    {{- include "windowsExporter.labels" . | nindent 4 }}
+  {{- with .Values.daemonsetAnnotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   selector:
-    matchLabels: {{ include "windowsExporter.labels" . | nindent 6 }}
+    matchLabels:
+      {{- include "windowsExporter.labels" . | nindent 6 }}
+  {{- with .Values.updateStrategy }}
+  updateStrategy:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   template:
     metadata:
-      labels: {{ include "windowsExporter.labels" . | nindent 8 }}
+      {{- with .Values.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      labels:
+        {{- include "windowsExporter.labels" . | nindent 8 }}
     spec:
-      nodeSelector: {{ include "windowsExporter.client.nodeSelector" . | nindent 8 }}
-      tolerations: {{ include "windowsExporter.client.tolerations" . | nindent 8 }}
-      serviceAccountName: {{ template "windowsExporter.name" . }}
-      containers:
-      - name: exporter-node-proxy
-        image: {{ template "system_default_registry" . }}{{ .Values.clients.image.repository }}:{{ .Values.clients.image.tag }}
-        command: ["pwsh", "-f", "c:/scripts/proxy-entry.ps1"]
-        ports:
-        - name: http
-          containerPort: {{ required "Need .Values.clients.port to figure out where to get metrics from" .Values.clients.port }}
-        env: {{ include "windowsExporter.client.env" . | nindent 10 }}
-{{- if .Values.resources }}
-        resources: {{ toYaml .Values.clients.proxy.resources | nindent 10 }}
-{{- end }}
-        volumeMounts:
-        - name: wins-pipe-proxy
-          mountPath: \\.\pipe\rancher_wins_proxy
-        - name: exporter-scripts
-          mountPath: c:/scripts/
-      - name: exporter-node
-        image: {{ template "system_default_registry" . }}{{ .Values.clients.image.repository }}:{{ .Values.clients.image.tag }}
-        command: ["pwsh", "-f", "c:/scripts/run.ps1"]
-{{- if .Values.clients.args }}
-        args: {{ .Values.clients.args }}
-{{- end }}
-        env: {{ include "windowsExporter.client.env" . | nindent 8 }}
-        - name: CATTLE_PREFIX_PATH
-          value: {{ default "c:\\" .Values.global.cattle.rkeWindowsPathPrefix | replace "/" "\\" }}
-{{- if .Values.resources }}
-        resources: {{ toYaml .Values.clients.resources | nindent 10 }}
-{{- end }}
-        volumeMounts:
-        - name: wins-pipe
-          mountPath: \\.\pipe\rancher_wins
-        - name: binary-host-path
-          mountPath: c:/host/etc/windows-exporter
-        - name: exporter-scripts
-          mountPath: c:/scripts/
+      automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
+      {{- with .Values.securityContext }}
+      securityContext:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.priorityClassName }}
+      priorityClassName: {{ . }}
+      {{- end }}
       initContainers:
-      - name: check-wins-version
-        image: {{ template "system_default_registry" . }}{{ .Values.clients.image.repository }}:{{ .Values.clients.image.tag }}
-        command: ["pwsh", "-f", "c:/scripts/check-wins-version.ps1"]
-        volumeMounts:
-        - name: wins-pipe
-          mountPath: \\.\pipe\rancher_wins
-        - name: exporter-scripts
-          mountPath: c:/scripts/
+        - name: configure-firewall
+          image: {{ include "prometheus-windows-exporter.image" . }}
+          command:
+          - C:\WINDOWS\System32\WindowsPowerShell\v1.0\powershell.exe
+          args: ["-f", "scripts/configure-firewall.ps1"]
+          volumeMounts:
+            - mountPath: /scripts
+              name: exporter-scripts
+        {{- with .Values.extraInitContainers }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
+      serviceAccountName: {{ include "prometheus-windows-exporter.fullname" . }}
+      containers:
+        - name: windows-exporter
+          image: {{ include "prometheus-windows-exporter.image" . }}
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - --config.file=%CONTAINER_SANDBOX_MOUNT_POINT%/config.yml
+            - --collector.textfile.directories=%CONTAINER_SANDBOX_MOUNT_POINT%
+            - --web.listen-address=:{{ .Values.service.port }}
+            {{- with .Values.extraArgs }}
+            {{- toYaml . | nindent 12 }}
+            {{- end }}
+          {{- with .Values.securityContext }}
+          securityContext:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          env:
+            {{- range $key, $value := .Values.env }}
+            - name: {{ $key }}
+              value: {{ $value | quote }}
+            {{- end }}
+          ports:
+            - name: http
+              containerPort: {{ .Values.service.port }}
+              hostPort: {{ .Values.service.port }}
+              protocol: TCP
+          livenessProbe:
+            failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
+            httpGet:
+              httpHeaders:
+              {{- range $_, $header := .Values.livenessProbe.httpGet.httpHeaders }}
+              - name: {{ $header.name }}
+                value: {{ $header.value }}
+              {{- end }}
+              path: /
+              port: {{ .Values.service.port }}
+              scheme: {{ upper .Values.livenessProbe.httpGet.scheme }}
+            initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
+            successThreshold: {{ .Values.livenessProbe.successThreshold }}
+            timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
+          readinessProbe:
+            failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
+            httpGet:
+              httpHeaders:
+              {{- range $_, $header := .Values.readinessProbe.httpGet.httpHeaders }}
+              - name: {{ $header.name }}
+                value: {{ $header.value }}
+              {{- end }}
+              path: /
+              port: {{ .Values.service.port }}
+              scheme: {{ upper .Values.readinessProbe.httpGet.scheme }}
+            initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
+            successThreshold: {{ .Values.readinessProbe.successThreshold }}
+            timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+          {{- with .Values.resources }}
+          resources:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          volumeMounts:
+            - name: config
+              mountPath: /config.yml
+              subPath: config.yml
+            {{- range $_, $mount := .Values.extraHostVolumeMounts }}
+            - name: {{ $mount.name }}
+              mountPath: {{ $mount.mountPath }}
+              readOnly: {{ $mount.readOnly }}
+            {{- end }}
+            {{- range $_, $mount := .Values.sidecarVolumeMount }}
+            - name: {{ $mount.name }}
+              mountPath: {{ $mount.mountPath }}
+              readOnly: true
+            {{- end }}
+            {{- range $_, $mount := .Values.configmaps }}
+            - name: {{ $mount.name }}
+              mountPath: {{ $mount.mountPath }}
+            {{- end }}
+            {{- range $_, $mount := .Values.secrets }}
+            - name: {{ .name }}
+              mountPath: {{ .mountPath }}
+            {{- end }}
+        {{- with .Values.sidecars }}
+        {{- toYaml . | nindent 8 }}
+          {{- if or .Values.sidecarVolumeMount .Values.sidecarHostVolumeMounts }}
+          volumeMounts:
+            {{- range $_, $mount := .Values.sidecarVolumeMount }}
+            - name: {{ $mount.name }}
+              mountPath: {{ $mount.mountPath }}
+              readOnly: {{ $mount.readOnly }}
+            {{- end }}
+            {{- range $_, $mount := .Values.sidecarHostVolumeMounts }}
+            - name: {{ $mount.name }}
+              mountPath: {{ $mount.mountPath }}
+              readOnly: {{ $mount.readOnly }}
+            {{- end }}
+          {{- end }}
+        {{- end }}
+      {{- if or .Values.imagePullSecrets .Values.global.imagePullSecrets }}
+      imagePullSecrets:
+        {{- include "prometheus-windows-exporter.imagePullSecrets" (dict "Values" .Values "imagePullSecrets" .Values.imagePullSecrets) | indent 8 }}
+      {{- end }}
+      hostNetwork: {{ .Values.hostNetwork }}
+      hostPID: {{ .Values.hostPID }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.dnsConfig }}
+      dnsConfig:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       volumes:
-      - name: wins-pipe
-        hostPath:
-          path: \\.\pipe\rancher_wins
-      - name: wins-pipe-proxy
-        hostPath:
-          path: \\.\pipe\rancher_wins_proxy
-      - name: binary-host-path
-        hostPath:
-          path: {{ default "c:\\" .Values.global.cattle.rkeWindowsPathPrefix | replace "\\" "/" }}etc/windows-exporter
-          type: DirectoryOrCreate
-      - name: exporter-scripts
-        configMap:
-          name: {{ template "windowsExporter.name" . }}-scripts
-{{- end }}{{- end }}
+        - name: exporter-scripts
+          configMap:
+            name: {{ include "prometheus-windows-exporter.fullname" . }}-scripts
+        - name: config
+          configMap:
+            name: {{ include "prometheus-windows-exporter.fullname" . }}
+        {{- range $_, $mount := .Values.extraHostVolumeMounts }}
+        - name: {{ $mount.name }}
+          hostPath:
+            path: {{ $mount.hostPath }}
+        {{- end }}
+        {{- range $_, $mount := .Values.sidecarVolumeMount }}
+        - name: {{ $mount.name }}
+          emptyDir:
+            medium: Memory
+        {{- end }}
+        {{- range $_, $mount := .Values.sidecarHostVolumeMounts }}
+        - name: {{ $mount.name }}
+          hostPath:
+            path: {{ $mount.hostPath }}
+        {{- end }}
+        {{- range $_, $mount := .Values.configmaps }}
+        - name: {{ $mount.name }}
+          configMap:
+            name: {{ $mount.name }}
+        {{- end }}
+        {{- range $_, $mount := .Values.secrets }}
+        - name: {{ $mount.name }}
+          secret:
+            secretName: {{ $mount.name }}
+        {{- end }}
