--- a/charts/rancher-monitoring/104.0.0-rc1+up45.31.1/charts/windowsExporter/templates/servicemonitor.yaml
+++ b/charts/rancher-monitoring/104.0.0-rc1+up45.31.1/charts/windowsExporter/templates/servicemonitor.yaml
@@ -1,41 +1,75 @@
-{{- if and .Values.serviceMonitor .Values.clients }}{{- if and .Values.serviceMonitor.enabled .Values.clients.enabled }}
-apiVersion: monitoring.coreos.com/v1
+{{- if .Values.prometheus.monitor.enabled }}
+apiVersion: {{ .Values.prometheus.monitor.apiVersion | default "monitoring.coreos.com/v1" }}
 kind: ServiceMonitor
 metadata:
-  labels: {{ include "windowsExporter.labels" . | nindent 4 }}
-  name: {{ template "windowsExporter.name" . }}
-  namespace: {{ template "windowsExporter.namespace" . }}
+  name: {{ include "prometheus-windows-exporter.fullname" . }}
+  namespace: {{ include "prometheus-windows-exporter.monitor-namespace" . }}
+  labels:
+    {{- include "windowsExporter.labels" . | nindent 4 }}
+    {{- with .Values.prometheus.monitor.additionalLabels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
-  selector:
-    matchLabels: {{ include "windowsExporter.labels" . | nindent 6 }}
-  namespaceSelector:
-    matchNames:
-    - {{ template "windowsExporter.namespace" . }}
-  jobLabel: component
+  jobLabel: {{ default "app.kubernetes.io/name" .Values.prometheus.monitor.jobLabel }}
+  {{- include "servicemonitor.scrapeLimits" .Values.prometheus.monitor | nindent 2 }}
+  {{- with .Values.prometheus.monitor.podTargetLabels }}
   podTargetLabels:
-  - component
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  selector:
+    matchLabels:
+    {{- with .Values.prometheus.monitor.selectorOverride }}
+      {{- toYaml . | nindent 6 }}
+    {{- else }}
+      {{- include "windowsExporter.labels" . | nindent 6 }}
+    {{- end }}
+  {{- with .Values.prometheus.monitor.attachMetadata }}
+  attachMetadata:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   endpoints:
-  - port: windows-metrics
-    metricRelabelings:
-{{- include "windowsExporter.renamedMetricsRelabeling" . | nindent 4 -}}
-    - sourceLabels: [__name__]
-      regex: 'wmi_(.*)'
-      replacement: 'windows_$1'
-      targetLabel: __name__
-    - sourceLabels: [volume, nic]
-      regex: (.*);(.*)
-      separator: ''
-      targetLabel: device
-      action: replace
-      replacement: $1$2
-    - sourceLabels: [__name__]
-      regex: windows_cs_logical_processors
-      replacement: 'system'
-      targetLabel: mode
-    relabelings:
-    - separator: ':'
-      sourceLabels:
-      - __meta_kubernetes_pod_host_ip
-      - __meta_kubernetes_pod_container_port_number
-      targetLabel: instance
-{{- end }}{{- end }}
+    - port: {{ .Values.service.portName }}
+      scheme: {{ .Values.prometheus.monitor.scheme }}
+      {{- with .Values.prometheus.monitor.basicAuth }}
+      basicAuth:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.prometheus.monitor.bearerTokenFile }}
+      bearerTokenFile: {{ . }}
+      {{- end }}
+      {{- with .Values.prometheus.monitor.tlsConfig }}
+      tlsConfig:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.prometheus.monitor.proxyUrl }}
+      proxyUrl: {{ . }}
+      {{- end }}
+      {{- with .Values.prometheus.monitor.interval }}
+      interval: {{ . }}
+      {{- end }}
+      {{- with .Values.prometheus.monitor.scrapeTimeout }}
+      scrapeTimeout: {{ . }}
+      {{- end }}
+      metricRelabelings:
+{{- include "windowsExporter.renamedMetricsRelabeling" . | nindent 6 -}}
+      - sourceLabels: [__name__]
+        regex: 'wmi_(.*)'
+        replacement: 'windows_$1'
+        targetLabel: __name__
+      - sourceLabels: [volume, nic]
+        regex: (.*);(.*)
+        separator: ''
+        targetLabel: device
+        action: replace
+        replacement: $1$2
+      - sourceLabels: [__name__]
+        regex: windows_cs_logical_processors
+        replacement: 'system'
+        targetLabel: mode
+      relabelings:
+      - separator: ':'
+        sourceLabels:
+        - __meta_kubernetes_pod_host_ip
+        - __meta_kubernetes_pod_container_port_number
+        targetLabel: instance
+{{- end }}
