[dev-v2.9] rancher-monitoring update (#3947)

--- a/packages/rancher-monitoring/rancher-monitoring/package.yaml
+++ b/packages/rancher-monitoring/rancher-monitoring/package.yaml
@@ -8,5 +8,5 @@ additionalCharts:
       templateDirectory: crd-template
       crdDirectory: crd-manifest
       addCRDValidationToMainChart: true
-      useTarArchive: true
+      useTarArchive: false
 doNotRelease: false
