[dev-2.9] rancher-logging 104.0.0-rc1 add option to set fluentd log level (#3931)
Signed-off-by: Dharmit Shah <dharmit.shah@suse.com>

--- a/charts/rancher-logging/104.0.0-rc1+up4.4.0/templates/_generic_logging.yaml
+++ b/charts/rancher-logging/104.0.0-rc1+up4.4.0/templates/_generic_logging.yaml
@@ -59,6 +59,9 @@ spec:
     resources: {{- toYaml . | nindent 6 }}
     {{- end }}
   fluentd:
+    {{- with .Values.fluentd.logLevel }}
+    logLevel: {{ . }}
+    {{- end }}
     image:
       repository: {{ template "system_default_registry" . }}{{ .Values.images.fluentd.repository }}
       tag: {{ .Values.images.fluentd.tag }}
