[dev-v2.9] rancher-backup 104.0.0-rc.6 update (#3929)
Signed-off-by: Alexandre Lamarre <alexandre.lamarre@suse.com>

--- a/charts/rancher-backup/104.0.0+up5.0.0-rc.6/values.yaml
+++ b/charts/rancher-backup/104.0.0+up5.0.0-rc.6/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: rancher/backup-restore-operator
-  tag: v5.0.0-rc2
+  tag: v5.0.0-rc.6
 
 ## Default s3 bucket for storing all backup files created by the backup-restore-operator
 s3:
@@ -54,7 +54,7 @@ global:
       enabled: false # PSP enablement should default to false
   kubectl:
     repository: rancher/kubectl
-    tag: v1.21.9
+    tag: v1.27.13
 
 ## Node labels for pod assignment
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
