--- a/packages/rancher-backup/rancher-backup-crd/package.yaml
+++ b/packages/rancher-backup/rancher-backup-crd/package.yaml
@@ -1,2 +1,2 @@
-url: https://github.com/rancher/backup-restore-operator/releases/download/v5.0.0-rc2/rancher-backup-crd-5.0.0-rc2.tgz
+url: https://github.com/rancher/backup-restore-operator/releases/download/v5.0.0-rc.6/rancher-backup-crd-5.0.0-rc.6.tgz
 version: 104.0.0
