--- a/charts/rancher-backup-crd/104.0.0+up5.0.0-rc.6/Chart.yaml
+++ b/charts/rancher-backup-crd/104.0.0+up5.0.0-rc.6/Chart.yaml
@@ -4,8 +4,8 @@ annotations:
   catalog.cattle.io/namespace: cattle-resources-system
   catalog.cattle.io/release-name: rancher-backup-crd
 apiVersion: v2
-appVersion: 5.0.0-rc2
+appVersion: 5.0.0-rc.6
 description: Installs the CRDs for rancher-backup.
 name: rancher-backup-crd
 type: application
-version: 104.0.0+up5.0.0-rc2
+version: 104.0.0+up5.0.0-rc.6
