--- a/charts/rancher-backup/104.0.0+up5.0.0-rc.6/Chart.yaml
+++ b/charts/rancher-backup/104.0.0+up5.0.0-rc.6/Chart.yaml
@@ -2,7 +2,7 @@ annotations:
   catalog.cattle.io/auto-install: rancher-backup-crd=match
   catalog.cattle.io/certified: rancher
   catalog.cattle.io/display-name: Rancher Backups
-  catalog.cattle.io/kube-version: '>= 1.23.0-0 < 1.29.0-0'
+  catalog.cattle.io/kube-version: '>= 1.23.0-0 < 1.30.0-0'
   catalog.cattle.io/namespace: cattle-resources-system
   catalog.cattle.io/os: linux
   catalog.cattle.io/permits-os: linux,windows
@@ -12,9 +12,9 @@ annotations:
   catalog.cattle.io/scope: management
   catalog.cattle.io/type: cluster-tool
   catalog.cattle.io/ui-component: rancher-backup
-  catalog.cattle.io/upstream-version: 5.0.0
+  catalog.cattle.io/upstream-version: 5.0.0-rc.6
 apiVersion: v2
-appVersion: 5.0.0-rc2
+appVersion: 5.0.0-rc.6
 description: Provides ability to back up and restore the Rancher application running
   on any Kubernetes cluster
 icon: https://charts.rancher.io/assets/logos/backup-restore.svg
@@ -23,4 +23,4 @@ keywords:
 - infrastructure
 kubeVersion: '>= 1.23.0-0'
 name: rancher-backup
-version: 104.0.0+up5.0.0-rc2
+version: 104.0.0+up5.0.0-rc.6
