The template namespace post upgrade yaml fails when using system default registry (#3958)

--- a/charts/rancher-gatekeeper/104.0.0+up3.13.0/templates/namespace-post-install.yaml
+++ b/charts/rancher-gatekeeper/104.0.0+up3.13.0/templates/namespace-post-install.yaml
@@ -68,7 +68,7 @@ spec:
             {{- toYaml .Values.postInstall.securityContext | nindent 12 }}
         {{- if .Values.postInstall.labelNamespace.extraNamespaces }}
         - name: kubectl-label-extra
-          image: "{{ .Values.postInstall.labelNamespace.image.repository }}:{{ .Values.postInstall.labelNamespace.image.tag }}"
+          image: '{{ template "system_default_registry" . }}{{ .Values.postInstall.labelNamespace.image.repository }}:{{ .Values.postInstall.labelNamespace.image.tag }}'
           imagePullPolicy: {{ .Values.postInstall.labelNamespace.image.pullPolicy }}
           args:
             - label
