--- a/charts/rancher-gatekeeper/104.0.0+up3.13.0/templates/namespace-post-upgrade.yaml
+++ b/charts/rancher-gatekeeper/104.0.0+up3.13.0/templates/namespace-post-upgrade.yaml
@@ -60,7 +60,7 @@ spec:
             {{- toYaml .Values.postUpgrade.securityContext | nindent 12 }}
         {{- if .Values.postUpgrade.labelNamespace.extraNamespaces }}
         - name: kubectl-label-extra
-          image: "{{ .Values.postUpgrade.labelNamespace.image.repository }}:{{ .Values.postUpgrade.labelNamespace.image.tag }}"
+          image: '{{ template "system_default_registry" . }}{{ .Values.postUpgrade.labelNamespace.image.repository }}:{{ .Values.postUpgrade.labelNamespace.image.tag }}'
           imagePullPolicy: {{ .Values.postUpgrade.labelNamespace.image.pullPolicy }}
           args:
             - label
