[v2.9] Bump hosted providers to v1.9.0-rc.4 (#3966)

--- a/charts/rancher-aks-operator-crd/104.0.0+up1.9.0-rc.4/Chart.yaml
+++ b/charts/rancher-aks-operator-crd/104.0.0+up1.9.0-rc.4/Chart.yaml
@@ -4,9 +4,9 @@ annotations:
   catalog.cattle.io/namespace: cattle-system
   catalog.cattle.io/os: linux
   catalog.cattle.io/permits-os: linux,windows
-  catalog.cattle.io/release-name: rancher-eks-operator-crd
+  catalog.cattle.io/release-name: rancher-aks-operator-crd
 apiVersion: v2
-appVersion: 1.9.0-rc.1
-description: EKS Operator CustomResourceDefinitions
-name: rancher-eks-operator-crd
-version: 104.0.0+up1.9.0-rc.1
+appVersion: 1.9.0-rc.4
+description: AKS Operator CustomResourceDefinitions
+name: rancher-aks-operator-crd
+version: 104.0.0+up1.9.0-rc.4
