--- a/charts/rancher-gke-operator/104.0.0+up1.9.0-rc.4/values.yaml
+++ b/charts/rancher-gke-operator/104.0.0+up1.9.0-rc.4/values.yaml
@@ -2,10 +2,10 @@ global:
   cattle:
     systemDefaultRegistry: ""
 
-eksOperator:
+gkeOperator:
   image:
-    repository: rancher/eks-operator
-    tag: v1.9.0-rc.1
+    repository: rancher/gke-operator
+    tag: v1.9.0-rc.4
 
 httpProxy: ""
 httpsProxy: ""
