--- a/charts/rancher-gke-operator-crd/104.0.0+up1.9.0-rc.4/templates/crds.yaml
+++ b/charts/rancher-gke-operator-crd/104.0.0+up1.9.0-rc.4/templates/crds.yaml
@@ -184,6 +184,9 @@ spec:
                           type: array
                         preemptible:
                           type: boolean
+                        serviceAccount:
+                          nullable: true
+                          type: string
                         tags:
                           items:
                             nullable: true
