[dev-v2.9] rancher-monitoring k8s 1.29 & 1.30 support (#3910)

--- a/charts/prometheus-federator/104.0.0-rc1+up0.4.1/Chart.yaml
+++ b/charts/prometheus-federator/104.0.0-rc1+up0.4.1/Chart.yaml
@@ -1,7 +1,7 @@
 annotations:
   catalog.cattle.io/certified: rancher
   catalog.cattle.io/display-name: Prometheus Federator
-  catalog.cattle.io/kube-version: '>= 1.16.0-0 < 1.28.0-0'
+  catalog.cattle.io/kube-version: '>= 1.26.0-0 < 1.31.0-0'
   catalog.cattle.io/namespace: cattle-monitoring-system
   catalog.cattle.io/os: linux,windows
   catalog.cattle.io/permits-os: linux,windows
@@ -14,7 +14,9 @@ dependencies:
 - condition: helmProjectOperator.enabled
   name: helmProjectOperator
   repository: file://./charts/helmProjectOperator
+  version: '*'
 description: Prometheus Federator
 icon: https://raw.githubusercontent.com/rancher/prometheus-federator/main/assets/logos/prometheus-federator.svg
+kubeVersion: '>=1.26.0-0'
 name: prometheus-federator
 version: 104.0.0-rc1+up0.4.1
