--- a/charts/rancher-monitoring/104.0.0-rc1+up45.31.1/Chart.yaml
+++ b/charts/rancher-monitoring/104.0.0-rc1+up45.31.1/Chart.yaml
@@ -10,7 +10,7 @@ annotations:
   catalog.cattle.io/certified: rancher
   catalog.cattle.io/deploys-on-os: windows
   catalog.cattle.io/display-name: Monitoring
-  catalog.cattle.io/kube-version: '>= 1.16.0-0 < 1.29.0-0'
+  catalog.cattle.io/kube-version: '>= 1.26.0-0 < 1.31.0-0'
   catalog.cattle.io/namespace: cattle-monitoring-system
   catalog.cattle.io/permits-os: linux,windows
   catalog.cattle.io/provides-gvr: monitoring.coreos.com.prometheus/v1
@@ -27,69 +27,91 @@ dependencies:
 - condition: grafana.enabled
   name: grafana
   repository: file://./charts/grafana
+  version: '*'
 - condition: hardenedKubelet.enabled
   name: hardenedKubelet
   repository: file://./charts/hardenedKubelet
+  version: '*'
 - condition: hardenedNodeExporter.enabled
   name: hardenedNodeExporter
   repository: file://./charts/hardenedNodeExporter
+  version: '*'
 - condition: k3sServer.enabled
   name: k3sServer
   repository: file://./charts/k3sServer
+  version: '*'
 - condition: kubeStateMetrics.enabled
   name: kube-state-metrics
   repository: file://./charts/kube-state-metrics
+  version: '*'
 - condition: kubeAdmControllerManager.enabled
   name: kubeAdmControllerManager
   repository: file://./charts/kubeAdmControllerManager
+  version: '*'
 - condition: kubeAdmEtcd.enabled
   name: kubeAdmEtcd
   repository: file://./charts/kubeAdmEtcd
+  version: '*'
 - condition: kubeAdmProxy.enabled
   name: kubeAdmProxy
   repository: file://./charts/kubeAdmProxy
+  version: '*'
 - condition: kubeAdmScheduler.enabled
   name: kubeAdmScheduler
   repository: file://./charts/kubeAdmScheduler
+  version: '*'
 - condition: prometheus-adapter.enabled
   name: prometheus-adapter
   repository: file://./charts/prometheus-adapter
+  version: '*'
 - condition: nodeExporter.enabled
   name: prometheus-node-exporter
   repository: file://./charts/prometheus-node-exporter
+  version: '*'
 - condition: rke2ControllerManager.enabled
   name: rke2ControllerManager
   repository: file://./charts/rke2ControllerManager
+  version: '*'
 - condition: rke2Etcd.enabled
   name: rke2Etcd
   repository: file://./charts/rke2Etcd
+  version: '*'
 - condition: rke2IngressNginx.enabled
   name: rke2IngressNginx
   repository: file://./charts/rke2IngressNginx
+  version: '*'
 - condition: rke2Proxy.enabled
   name: rke2Proxy
   repository: file://./charts/rke2Proxy
+  version: '*'
 - condition: rke2Scheduler.enabled
   name: rke2Scheduler
   repository: file://./charts/rke2Scheduler
+  version: '*'
 - condition: rkeControllerManager.enabled
   name: rkeControllerManager
   repository: file://./charts/rkeControllerManager
+  version: '*'
 - condition: rkeEtcd.enabled
   name: rkeEtcd
   repository: file://./charts/rkeEtcd
+  version: '*'
 - condition: rkeIngressNginx.enabled
   name: rkeIngressNginx
   repository: file://./charts/rkeIngressNginx
+  version: '*'
 - condition: rkeProxy.enabled
   name: rkeProxy
   repository: file://./charts/rkeProxy
+  version: '*'
 - condition: rkeScheduler.enabled
   name: rkeScheduler
   repository: file://./charts/rkeScheduler
+  version: '*'
 - condition: global.cattle.windows.enabled
   name: windowsExporter
   repository: file://./charts/windowsExporter
+  version: '*'
 description: kube-prometheus-stack collects Kubernetes manifests, Grafana dashboards,
   and Prometheus rules combined with documentation and scripts to provide easy to
   operate end-to-end Kubernetes cluster monitoring with Prometheus using the Prometheus
@@ -100,7 +122,7 @@ keywords:
 - operator
 - prometheus
 - kube-prometheus
-kubeVersion: '>=1.16.0-0'
+kubeVersion: '>=1.26.0-0'
 maintainers:
 - email: andrew@quadcorps.co.uk
   name: andrewgkew
