--- a/charts/rancher-monitoring/104.0.0-rc1+up45.31.1/charts/grafana/Chart.yaml
+++ b/charts/rancher-monitoring/104.0.0-rc1+up45.31.1/charts/grafana/Chart.yaml
@@ -6,7 +6,7 @@ annotations:
     - name: Upstream Project
       url: https://github.com/grafana/grafana
   catalog.cattle.io/hidden: "true"
-  catalog.cattle.io/kube-version: '>= 1.16.0-0 < 1.27.0-0'
+  catalog.cattle.io/kube-version: '>= 1.26.0-0 < 1.31.0-0'
   catalog.cattle.io/os: linux
   catalog.rancher.io/certified: rancher
   catalog.rancher.io/namespace: cattle-monitoring-system
@@ -19,7 +19,7 @@ icon: https://raw.githubusercontent.com/grafana/grafana/master/public/img/logo_t
 keywords:
 - monitoring
 - metric
-kubeVersion: ^1.8.0-0
+kubeVersion: '>=1.26.0-0'
 maintainers:
 - email: zanhsieh@gmail.com
   name: zanhsieh
