--- a/charts/rancher-monitoring/104.0.0-rc1+up45.31.1/charts/prometheus-adapter/Chart.yaml
+++ b/charts/rancher-monitoring/104.0.0-rc1+up45.31.1/charts/prometheus-adapter/Chart.yaml
@@ -1,6 +1,6 @@
 annotations:
   catalog.cattle.io/hidden: "true"
-  catalog.cattle.io/kube-version: '>= 1.16.0-0 < 1.27.0-0'
+  catalog.cattle.io/kube-version: '>= 1.26.0-0 < 1.31.0-0'
   catalog.cattle.io/os: linux
   catalog.rancher.io/certified: rancher
   catalog.rancher.io/namespace: cattle-monitoring-system
@@ -14,6 +14,7 @@ keywords:
 - metrics
 - prometheus
 - adapter
+kubeVersion: '>=1.26.0-0'
 maintainers:
 - email: mattias.gees@jetstack.io
   name: mattiasgees
