updating CODEOWNERS file release-team (#4036)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,16 +1,16 @@
 # Global Reviewer
-/.github @rancher/mapps
-/docs @rancher/mapps
-/scripts @rancher/mapps
-/CNAME @rancher/mapps
-/Makefile @rancher/mapps
-/README.md @rancher/mapps
-/_config.yml @rancher/mapps
-/configuration.yaml @rancher/mapps
-/regsync.yaml @rancher/mapps
-/index.html @rancher/mapps
+/.github @rancher/release-team
+/docs @rancher/release-team
+/scripts @rancher/release-team
+/CNAME @rancher/release-team
+/Makefile @rancher/release-team
+/README.md @rancher/release-team
+/_config.yml @rancher/release-team
+/configuration.yaml @rancher/release-team
+/regsync.yaml @rancher/release-team
+/index.html @rancher/release-team
 
-# Elemental 
+# Elemental
 packages/elemental @rancher/elemental
 
 # Fleet
@@ -19,7 +19,7 @@ packages/fleet @rancher/fleet
 # Harvester
 packages/harvester @rancher/harvester
 
-# Longhorn 
+# Longhorn
 packages/longhorn @rancher/longhorn
 packages/longhorn-crd @rancher/longhorn
 
@@ -32,30 +32,30 @@ packages/rancher-aks-operator @rancher/highlander
 packages/rancher-eks-operator @rancher/highlander
 packages/rancher-gke-operator @rancher/highlander
 
-# Rancher Alerting 
+# Rancher Alerting
 packages/rancher-alerting @rancher/observation-backup
 
 # Rancher Backup
 packages/rancher-backup @rancher/observation-backup
 
-# Rancher CIS Benchmark 
+# Rancher CIS Benchmark
 packages/rancher-cis-benchmark @rancher/infracloud-team
 tests/rancher-cis-benchmark @rancher/infracloud-team
 
 # Rancher CSP Adapter
 packages/rancher-csp-adapter @rancher/socket
 
-# Rancher OPA Gatekeeper 
+# Rancher OPA Gatekeeper
 packages/rancher-gatekeeper @rancher/mapps
 
-# Rancher Istio 
+# Rancher Istio
 packages/rancher-istio @rancher/mapps
 tests/rancher-istio @rancher/mapps
 
-# Rancher Logging 
+# Rancher Logging
 packages/rancher-logging @rancher/observation-backup
 
-# Rancher Monitoring 
+# Rancher Monitoring
 packages/rancher-monitoring @rancher/observation-backup
 
 # Rancher SRIOV
@@ -65,13 +65,13 @@ packages/rancher-nfd @rancher/rke1-team
 # Rancher Provisioning CAPI
 packages/rancher-provisioning-capi @rancher/rancher-team-2-hostbusters-dev
 
-# Rancher VSphere  
+# Rancher VSphere
 packages/rancher-vsphere @rancher/rancher-team-2-hostbusters-dev
 
 # Rancher Windows GSMA
 packages/rancher-windows-gsma @rancher/rancher-team-2-hostbusters-dev
 
-# Rancher Webhook 
+# Rancher Webhook
 packages/rancher-webhook @rancher/rancher-squad-frameworks
 
 # System Upgrade Controller
@@ -79,4 +79,3 @@ packages/system-upgrade-controller @rancher/rancher-team-2-hostbusters-dev
 
 # UI Extension Operator
 packages/ui-plugin-operator @rancher/mapps
-
