[dev-v2.9] rancher-alerting-drivers k8s 1.29 & 1.30 support (#3909)

--- a/charts/rancher-alerting-drivers/104.0.0-rc1/Chart.yaml
+++ b/charts/rancher-alerting-drivers/104.0.0-rc1/Chart.yaml
@@ -1,7 +1,7 @@
 annotations:
   catalog.cattle.io/certified: rancher
   catalog.cattle.io/display-name: Alerting Drivers
-  catalog.cattle.io/kube-version: '>= 1.23.0-0 < 1.29.0-0'
+  catalog.cattle.io/kube-version: '>= 1.26.0-0 < 1.31.0-0'
   catalog.cattle.io/os: linux
   catalog.cattle.io/permits-os: linux,windows
   catalog.cattle.io/rancher-version: '>= 2.9.0-0 < 2.10.0-0'
@@ -24,5 +24,6 @@ keywords:
 - monitoring
 - alertmanger
 - webhook
+kubeVersion: '>=1.26.0-0'
 name: rancher-alerting-drivers
 version: 104.0.0-rc1
