[dev-v2.9] rancher-provisioning-capi 104.0.0+up0.3.0-rc.1 add (#4107)
Signed-off-by: Chirayu Kapoor <chirayu.kapoor@suse.com>
Co-authored-by: Vardhaman Surana <vardhaman.surana@suse.com>

--- a/charts/rancher-provisioning-capi/104.0.0+up0.3.0-rc.1/Chart.yaml
+++ b/charts/rancher-provisioning-capi/104.0.0+up0.3.0-rc.1/Chart.yaml
@@ -2,7 +2,7 @@ annotations:
   catalog.cattle.io/certified: rancher
   catalog.cattle.io/display-name: Rancher Provisioning CAPI Controller Manager
   catalog.cattle.io/hidden: "true"
-  catalog.cattle.io/kube-version: '>=1.27.0-0'
+  catalog.cattle.io/kube-version: '>= 1.27.0-0 < 1.31.0-0'
   catalog.cattle.io/namespace: cattle-provisioning-capi-system
   catalog.cattle.io/os: linux
   catalog.cattle.io/permits-os: linux,windows
@@ -10,7 +10,7 @@ annotations:
   catalog.cattle.io/rancher-version: '>= 2.9.0-0 < 2.10.0-0'
   catalog.cattle.io/release-name: rancher-provisioning-capi
 apiVersion: v1
-appVersion: 1.6.4
+appVersion: 1.7.3
 description: capi-controller-manager compatible with Rancher Provisioning
 home: https://github.com/rancher/provisioning/blob/main/charts/capi/
 maintainers:
@@ -19,4 +19,4 @@ maintainers:
 name: rancher-provisioning-capi
 sources:
 - https://github.com/rancher/provisioning/blob/main/charts/capi/
-version: 104.0.0+up0.2.0
+version: 104.0.0+up0.3.0-rc.1
