--- a/charts/rancher-provisioning-capi/104.0.0+up0.3.0-rc.1/templates/clusterrole-capi-manager-role.yaml
+++ b/charts/rancher-provisioning-capi/104.0.0+up0.3.0-rc.1/templates/clusterrole-capi-manager-role.yaml
@@ -44,6 +44,18 @@ rules:
       - list
       - watch
   - apiGroups:
+      - authentication.k8s.io
+    resources:
+      - tokenreviews
+    verbs:
+      - create
+  - apiGroups:
+      - authorization.k8s.io
+    resources:
+      - subjectaccessreviews
+    verbs:
+      - create
+  - apiGroups:
       - bootstrap.cluster.x-k8s.io
       - controlplane.cluster.x-k8s.io
       - infrastructure.cluster.x-k8s.io
@@ -184,6 +196,18 @@ rules:
       - machinehealthchecks/finalizers
       - machinehealthchecks/status
     verbs:
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
+      - cluster.x-k8s.io
+    resources:
+      - machinepools
+    verbs:
+      - create
+      - delete
       - get
       - list
       - patch
