--- a/charts/rancher-provisioning-capi/104.0.0+up0.3.0-rc.1/templates/deployment-capi-controller-manager.yaml
+++ b/charts/rancher-provisioning-capi/104.0.0+up0.3.0-rc.1/templates/deployment-capi-controller-manager.yaml
@@ -50,6 +50,9 @@ spec:
             - containerPort: 9440
               name: healthz
               protocol: TCP
+            - containerPort: 8443
+              name: metrics
+              protocol: TCP
           readinessProbe:
             httpGet:
               path: /readyz
