[dev-v2.9] neuvector 104.0.0+up2.7.7 add (#4162)
Co-authored-by: selvamt94 <sthangaraj@neuvector.com>

--- a/packages/neuvector/generated-changes/exclude/templates/csp-role.yaml
+++ b/packages/neuvector/generated-changes/exclude/templates/csp-role.yaml
@@ -15,7 +15,7 @@ metadata:
   labels:
     chart: {{ template "neuvector.chart" . }}
     release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    heritage: Helm
 rules:
 - apiGroups:
   - ""
@@ -37,6 +37,14 @@ rules:
   - configmaps
   resourceNames:
   - csp-config
+  verbs:
+  - "*"
+- apiGroups:
+  - ""
+  resources:
+  - configmaps
+  resourceNames:
+  - metering-archive
   verbs:
   - "*"
 - apiGroups:
